--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos DONE.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos DONE.md
@@ -1,9 +1,30 @@
 ## Contenido de texto y elementos básicos
 
+
+-> ![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%3ACSS/img/image.jpg =600x300) <-
+
 ##### La estructura de los sitios Web
 
 Debajo de la magia del despliegue de los componentes en los navegadores, existen varios componentes de software dispuestos para la elaboraión de dicha magia. El contenido de la página desplegda por cualquier navegador, se divide genralmente en páginas web modernas e interactivas, en varias partes: uno o varios documentos para la estructura (HTML), una hoja de estilo por cada componente estructural (CSS), elementos gráficos o multimedia (imagen, audio, video), y por último, la interactividad o dinamismo de la página, el cual está dado por archivos JavaScript. 
 
 El objectivo de éste conjunto de escritos, es introducir el estándar moderno de HTML, es decir, HTML5, así como su par para estilo CSS3. Para ésto, se revisan de manera detallada, sus componentes estructurales, es decir, sus componentes básicos y avanzados, la manera de interacci´ón entre ambos, algunos ejemplos básicos de su uso, algunos ejercicios de refuerzo y otros ejemplos que muestran su uso en páginas web modernas. A continuación, se describe en detalle el objetivo y uso de los componentes o lenguajes de la web (HTML, CSS, JavaScript, Server-side programming), y posteriormente, se introducen los elementos básicos de HTML5.
 
-+ HTML
++ **HTML**
+
+-> ![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%3ACSS/img/html_logo.png =100x100) <-
+
+HTML (HyperText Markup Language), es el lenguaje usado para la creación de documentos web. HTML5, su versión más actual, es ampliamente soportada, y provee capacidades que la dan mayor robustez y flexibilidad sobre su versión anterior HTML 4.0. Ambos lenguajes, poseen una versión de sintáxis más estrica llamada XHTML. A diferencia de otros lenguajes como Python, Haskell, Java entre otros, HTML no es un lenguaje de programación. HTML es un lenguaje de diagramación de componentes, en el cual se dividen los elemntos de una página y se organiza su diagramación, posición y características de visualización haciendo uso del lenguaje, quien debe entender el lenguaje, es el navegador web, o en muchos casos, la aplicación que consuma el código HTML.
+
++ **CSS**
+
+-> ![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%3ACSS/img/css_logo.svg =100x100) <-
+
+
+
+
+
+
+
+
+
+
