Basic web design course information

--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos DONE.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos DONE.md
@@ -9,15 +9,42 @@ Debajo de la magia del despliegue de los componentes en los navegadores, existen
 
 El objectivo de éste conjunto de escritos, es introducir el estándar moderno de HTML, es decir, HTML5, así como su par para estilo CSS3. Para ésto, se revisan de manera detallada, sus componentes estructurales, es decir, sus componentes básicos y avanzados, la manera de interacci´ón entre ambos, algunos ejemplos básicos de su uso, algunos ejercicios de refuerzo y otros ejemplos que muestran su uso en páginas web modernas. A continuación, se describe en detalle el objetivo y uso de los componentes o lenguajes de la web (HTML, CSS, JavaScript, Server-side programming), y posteriormente, se introducen los elementos básicos de HTML5.
 
-+ **HTML**
+![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/triplet.png)
 
-![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/html_logo.png)
++ **HTML**
 
 HTML (HyperText Markup Language), es el lenguaje usado para la creación de documentos web. HTML5, su versión más actual, es ampliamente soportada, y provee capacidades que la dan mayor robustez y flexibilidad sobre su versión anterior HTML 4.0. Ambos lenguajes, poseen una versión de sintáxis más estrica llamada XHTML. A diferencia de otros lenguajes como Python, Haskell, Java entre otros, HTML no es un lenguaje de programación. HTML es un lenguaje de diagramación de componentes, en el cual se dividen los elemntos de una página y se organiza su diagramación, posición y características de visualización haciendo uso del lenguaje, quien debe entender el lenguaje, es el navegador web, o en muchos casos, la aplicación que consuma el código HTML.
 
 + **CSS**
 
-![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/css_logo.png)
+CSS, es el elemnto de asociar los elementos definidos por HTML, al estilo determinado, ésto es, los colores, maros, espacios, fuentes, posición. CSS3, incluye la capacidad de animar los elmentos sin necesidad de programar. CSS3, no es tampoco un lenguaje de programación, sino uno de presentación. CSS también provee métodos para controlar la presentación de los elementos en dispositivos distintos a un computador portátil o de escritorio.CSS, es un elemento que favorece el desarrollo limpio, pues al cambiar sólo una parte de uno de éstos documentos, se puede controlar la presentación de lementos presentes en distintas páginas web.
+
++ **JavaScript**
+
+JavaScript es un lenguaje de programación, que agrega interactividad y comportamiento a la presentación de las páginas web. Entre los usos básicos de JavaScript, están: revisar las entradas de los formularios, intercambiar los estilos de varios elmentos, hacer que el navegador recuerde información sobre la sesión, construir elementos interactivos de navegación. JavaScript es usado para manipular los elementos de una página web. Existen otros lenguajes para lograr resultados equivalnetes pero JavaScript (ECMAScript), es el más usado y el más soportado sobre la mayoría de navegadores web.
+
++ **Server-side programming**
+
+Para lograr una experiencia web equivalente a las logradas por sitios como Facebook, Quora, Twitter, entre otros, es necesario contar con datos compartidos, o con generación dinámica de contenido, entre otras cosas. Todo ésto, es llevado a cabo por aplicaciones web que corren el los servidores. Existen varios lenguajes y plataformas de desarrollo para éste tipo de aplicaciones. Algunos ejemplos son: PHP (Laravel, Cake, Drupal), Python (Django, Flask), Ruby (Rails, Sinatra), JavaScript (Node.js, Rhino), Java (Grails, Play!, JSF), entre otros. El desarrollo de aplicaciones web, es una labor de los desarrolladores back-end, mientras el stack de desarrollo front-end, está compuesto por los lenguajes anteriormente descritos (HTML, CSS, JavaScript), en donde también existen plataformas que facilitan el diseño, disminuyen el esfuerzo y agrupan patrones de desarrollo.
+
+##### La anatomía de una página web
+
+Es fascinante ver como la web está formada de archivos de texto que son interpretados por un navegador. A continuación, se presenta un ejemplo sencillo de una página web básica cuyo objetivo es desplegar información básica sobre algo en particular, la información académica de un profesor de una universidad.
+
+
+index.html
+
+```javascript
+var s = "JavaScript syntax highlighting";
+alert(s);
+```
+
+```html
+var s = "JavaScript syntax highlighting";
+alert(s);
+```
+
+ 
 
 
 
