A firt example on HTML/CSS

--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
@@ -31,6 +31,8 @@ Para lograr una experiencia web equivalente a las logradas por sitios como Faceb
 
 Es fascinante ver como la web está formada de archivos de texto que son interpretados por un navegador. A continuación, se presenta un ejemplo sencillo de una página web básica cuyo objetivo es desplegar información básica sobre algo en particular, la información académica de un profesor de una universidad.
 
+![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/ex1_screenshot.png)
+
 
 index.html
 
@@ -60,6 +62,33 @@ index.html
 	</body>
 </html>
 ```
+
+style.css
+
+```css
+body {
+	font : normal 1em Verdana;
+	margin : 1em 10%;
+}
+
+h1 {
+	font : italic 3em Georgia;
+	color : rgb(23, 109, 109);
+	margin : 1em 0 1em;
+}
+
+img {
+	margin : 0 20px 0 0;
+}
+
+h1 img {
+	margin-bottom: -20px;
+}
+
+small {
+	color : #666666;
+}
+``
 
  
 
