An easy example on HTML, CSS

--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
@@ -33,7 +33,6 @@ Es fascinante ver como la web está formada de archivos de texto que son interpr
 
 ![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/ex1_screenshot.png)
 
-
 index.html
 
 ```html
@@ -89,6 +88,12 @@ small {
 	color : #666666;
 }
 ```
+
+Al mismo nivel de los archivos *ìndex.html* y *style.css*, deben estar las imágenes referenciadas en el archivo HTML. 
+
+La página web del profesor ficticio *Juan Eduardo Soto*, está compuesta por un archivo *html* y otro archivo *css*. Como puede verse, el archivo *html*, contiene el contenido de texto de la página, e orden secuancial de los elementos y unos *tags* especiales que describen cada elemento presente en el árbol de contenidos del documento *html*. Agregar los *tags* a los distintos elementos, es una acción conocida como *marking up* del documento. HTML, fue originalmente conebido como un documento de enlace hacia otros documentos web, a lo largo de los años, HTML ha definido docenas de elementos como los encabezados, párrafos, texto enfatizado, y por supuesto, su elemento fundamental: links. El otro ingrediente de la página minimalista del profesor Soto, el cual está relacionado en el primer elemento *link* del documento *html*, es la hoja de estilo *style.css*. éste documento, incluye pocas lineas que definene la apariencia de cada documento en la ventana del navegador. Sin incluir el enlace a la hoja de estilo, la página luciría de la siguiente manera:
+
+
 
  
 
