--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
@@ -95,6 +95,12 @@ La página web del profesor ficticio *Juan Eduardo Soto*, está compuesta por un
 
 ![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/ex1_noCssScreenshot.png)
 
+El proceso completo de interacción para traer ésta página al navegador de un usuario en cualquier parte del mundo, suponiendo que el contenido está alojado en *https://cs.uniandes.edu.co/teacher/soto234* es:
+
+1. El cliente se conecta a la URL en el navegador de prefencia.
+2. El servidor, quien contiene el contenido relacionado con la URL de la petición, responde. La interacción es llevada a cabo por medio de peticiones HTTP, y respuestas HTTP. En éste caso, el servidor sirve *index.html*.
+3. El cliente es notificado con una respuesta satisfactoria del servidor, y acontinuación, comienza la interpretación del documento. Al encontrar contenido adjunto, hace las peticiones a quien sea necesario para obtener el contenido. En éste caso, como el contenido se encuentra en el mismo servidor, hace la petición nuevmanete sobre el contenido de las imagenes.
+4. La petición es responida con el contenido deseado en caso de existir, y finalmente, se despliega todo el contenido.
 
  
 
