An easy example on HTML, CSS

--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
@@ -5,27 +5,27 @@
 
 ##### La estructura de los sitios Web
 
-Debajo de la magia del despliegue de los componentes en los navegadores, existen varios componentes de software dispuestos para la elaboraión de dicha magia. El contenido de la página desplegda por cualquier navegador, se divide genralmente en páginas web modernas e interactivas, en varias partes: uno o varios documentos para la estructura (HTML), una hoja de estilo por cada componente estructural (CSS), elementos gráficos o multimedia (imagen, audio, video), y por último, la interactividad o dinamismo de la página, el cual está dado por archivos JavaScript. 
+Debajo de la magia del despliegue de los componentes en los navegadores, existen varios componentes de software dispuestos para la elaboración de dicha magia. El contenido de la página desplegada por cualquier navegador, se divide generalmente en páginas web modernas e interactivas, en varias partes: uno o varios documentos para la estructura (HTML), una hoja de estilo por cada componente estructural (CSS), elementos gráficos o multimedia (imagen, audio, video), y por último, la interactividad o dinamismo de la página, el cual está dado por archivos JavaScript. 
 
-El objectivo de éste conjunto de escritos, es introducir el estándar moderno de HTML, es decir, HTML5, así como su par para estilo CSS3. Para ésto, se revisan de manera detallada, sus componentes estructurales, es decir, sus componentes básicos y avanzados, la manera de interacci´ón entre ambos, algunos ejemplos básicos de su uso, algunos ejercicios de refuerzo y otros ejemplos que muestran su uso en páginas web modernas. A continuación, se describe en detalle el objetivo y uso de los componentes o lenguajes de la web (HTML, CSS, JavaScript, Server-side programming), y posteriormente, se introducen los elementos básicos de HTML5.
+El objetivo de éste conjunto de escritos, es introducir el estándar moderno de HTML, es decir, HTML5, así como su par para estilo CSS3. Para esto, se revisan de manera detallada, sus componentes estructurales, es decir, sus componentes básicos y avanzados, la manera de interacción entre ambos, algunos ejemplos básicos de su uso, algunos ejercicios de refuerzo y otros ejemplos que muestran su uso en páginas web modernas. A continuación, se describe en detalle el objetivo y uso de los componentes o lenguajes de la web (HTML, CSS, JavaScript, Server-side programming), y posteriormente, se introducen los elementos básicos de HTML5.
 
 ![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/triplet.png)
 
 + **HTML**
 
-HTML (HyperText Markup Language), es el lenguaje usado para la creación de documentos web. HTML5, su versión más actual, es ampliamente soportada, y provee capacidades que la dan mayor robustez y flexibilidad sobre su versión anterior HTML 4.0. Ambos lenguajes, poseen una versión de sintáxis más estrica llamada XHTML. A diferencia de otros lenguajes como Python, Haskell, Java entre otros, HTML no es un lenguaje de programación. HTML es un lenguaje de diagramación de componentes, en el cual se dividen los elemntos de una página y se organiza su diagramación, posición y características de visualización haciendo uso del lenguaje, quien debe entender el lenguaje, es el navegador web, o en muchos casos, la aplicación que consuma el código HTML.
+HTML (HyperText Markup Language), es el lenguaje usado para la creación de documentos web. HTML5, su versión más actual, es ampliamente soportada, y provee capacidades que la dan mayor robustez y flexibilidad sobre su versión anterior HTML 4.0. Ambos lenguajes, poseen una versión de sintaxis más estricta llamada XHTML. A diferencia de otros lenguajes como Python, Haskell, Java entre otros, HTML no es un lenguaje de programación. HTML es un lenguaje para la organización de componentes, en el cual se dividen los elementos de una página y se organiza su posición y características de visualización haciendo uso del lenguaje, quien debe entender el lenguaje, es el navegador web, o en muchos casos, la aplicación que consuma el código HTML.
 
 + **CSS**
 
-CSS, es el elemnto de asociar los elementos definidos por HTML, al estilo determinado, ésto es, los colores, maros, espacios, fuentes, posición. CSS3, incluye la capacidad de animar los elmentos sin necesidad de programar. CSS3, no es tampoco un lenguaje de programación, sino uno de presentación. CSS también provee métodos para controlar la presentación de los elementos en dispositivos distintos a un computador portátil o de escritorio.CSS, es un elemento que favorece el desarrollo limpio, pues al cambiar sólo una parte de uno de éstos documentos, se puede controlar la presentación de lementos presentes en distintas páginas web.
+CSS, es el elemento de asociar los elementos definidos por HTML, al estilo determinado, esto es, los colores, marcos, espacios, fuentes, posición. CSS3, incluye la capacidad de animar los elementos sin necesidad de programar. CSS3, no es tampoco un lenguaje de programación, sino uno de presentación. CSS también provee métodos para controlar la presentación de los elementos en dispositivos distintos a un computador portátil o de escritorio.CSS, es un elemento que favorece el desarrollo limpio, pues al cambiar sólo una parte de uno de éstos documentos, se puede controlar la presentación de elementos presentes en distintas páginas web.
 
 + **JavaScript**
 
-JavaScript es un lenguaje de programación, que agrega interactividad y comportamiento a la presentación de las páginas web. Entre los usos básicos de JavaScript, están: revisar las entradas de los formularios, intercambiar los estilos de varios elmentos, hacer que el navegador recuerde información sobre la sesión, construir elementos interactivos de navegación. JavaScript es usado para manipular los elementos de una página web. Existen otros lenguajes para lograr resultados equivalnetes pero JavaScript (ECMAScript), es el más usado y el más soportado sobre la mayoría de navegadores web.
+JavaScript es un lenguaje de programación, que agrega interactividad y comportamiento a la presentación de las páginas web. Entre los usos básicos de JavaScript, están: revisar las entradas de los formularios, intercambiar los estilos de varios elementos, hacer que el navegador recuerde información sobre la sesión, construir elementos interactivos de navegación. JavaScript es usado para manipular los elementos de una página web. Existen otros lenguajes para lograr resultados equivalentes pero JavaScript (ECMAScript), es el más usado y el más soportado sobre la mayoría de navegadores web.
 
 + **Server-side programming**
 
-Para lograr una experiencia web equivalente a las logradas por sitios como Facebook, Quora, Twitter, entre otros, es necesario contar con datos compartidos, o con generación dinámica de contenido, entre otras cosas. Todo ésto, es llevado a cabo por aplicaciones web que corren el los servidores. Existen varios lenguajes y plataformas de desarrollo para éste tipo de aplicaciones. Algunos ejemplos son: PHP (Laravel, Cake, Drupal), Python (Django, Flask), Ruby (Rails, Sinatra), JavaScript (Node.js, Rhino), Java (Grails, Play!, JSF), entre otros. El desarrollo de aplicaciones web, es una labor de los desarrolladores back-end, mientras el stack de desarrollo front-end, está compuesto por los lenguajes anteriormente descritos (HTML, CSS, JavaScript), en donde también existen plataformas que facilitan el diseño, disminuyen el esfuerzo y agrupan patrones de desarrollo.
+Para lograr una experiencia web equivalente a las logradas por sitios como Facebook, Quora, Twitter, entre otros, es necesario contar con datos compartidos, o con generación dinámica de contenido, entre otras cosas. Todo esto, es llevado a cabo por aplicaciones web que corren el los servidores. Existen varios lenguajes y plataformas de desarrollo para éste tipo de aplicaciones. Algunos ejemplos son: PHP (Laravel, Cake, Drupal), Python (Django, Flask), Ruby (Rails, Sinatra), JavaScript (Node.js, Rhino), Java (Grails, Play!, JSF), entre otros. El desarrollo de aplicaciones web, es una labor de los desarrolladores back-end, mientras el stack de desarrollo front-end, está compuesto por los lenguajes anteriormente descritos (HTML, CSS, JavaScript), en donde también existen plataformas que facilitan el diseño, disminuyen el esfuerzo y agrupan patrones de desarrollo.
 
 ##### La anatomía de una página web
 
@@ -91,16 +91,39 @@ small {
 
 Al mismo nivel de los archivos *ìndex.html* y *style.css*, deben estar las imágenes referenciadas en el archivo HTML. 
 
-La página web del profesor ficticio *Juan Eduardo Soto*, está compuesta por un archivo *html* y otro archivo *css*. Como puede verse, el archivo *html*, contiene el contenido de texto de la página, e orden secuancial de los elementos y unos *tags* especiales que describen cada elemento presente en el árbol de contenidos del documento *html*. Agregar los *tags* a los distintos elementos, es una acción conocida como *marking up* del documento. HTML, fue originalmente conebido como un documento de enlace hacia otros documentos web, a lo largo de los años, HTML ha definido docenas de elementos como los encabezados, párrafos, texto enfatizado, y por supuesto, su elemento fundamental: links. El otro ingrediente de la página minimalista del profesor Soto, el cual está relacionado en el primer elemento *link* del documento *html*, es la hoja de estilo *style.css*. éste documento, incluye pocas lineas que definene la apariencia de cada documento en la ventana del navegador. Sin incluir el enlace a la hoja de estilo, la página luciría de la siguiente manera:
+La página web del profesor ficticio *Juan Eduardo Soto*, está compuesta por un archivo *html* y otro archivo *css*. Como puede verse, el archivo *html*, contiene el contenido de texto de la página, el orden secuencial de los elementos y unos *tags* especiales que describen cada elemento presente en el árbol de contenidos del documento *html*. Agregar los *tags* a los distintos elementos, es una acción conocida como *marking up* del documento. HTML, fue originalmente concebido como un documento de enlace hacia otros documentos web, a lo largo de los años, HTML ha definido docenas de elementos como los encabezados, párrafos, texto enfatizado, y por supuesto, su elemento fundamental: links. El otro ingrediente de la página minimalista del profesor Soto, el cual está relacionado en el primer elemento *link* del documento *html*, es la hoja de estilo *style.css*. éste documento, incluye pocas lineas que definen la apariencia de cada documento en la ventana del navegador. Sin incluir el enlace a la hoja de estilo, la página luciría de la siguiente manera:
 
 ![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/ex1_noCssScreenshot.png)
 
 El proceso completo de interacción para traer ésta página al navegador de un usuario en cualquier parte del mundo, suponiendo que el contenido está alojado en *https://cs.uniandes.edu.co/teacher/soto234* es:
 
-1. El cliente se conecta a la URL en el navegador de prefencia.
+1. El cliente se conecta a la URL en el navegador de preferencia.
 2. El servidor, quien contiene el contenido relacionado con la URL de la petición, responde. La interacción es llevada a cabo por medio de peticiones HTTP, y respuestas HTTP. En éste caso, el servidor sirve *index.html*.
-3. El cliente es notificado con una respuesta satisfactoria del servidor, y acontinuación, comienza la interpretación del documento. Al encontrar contenido adjunto, hace las peticiones a quien sea necesario para obtener el contenido. En éste caso, como el contenido se encuentra en el mismo servidor, hace la petición nuevmanete sobre el contenido de las imagenes.
-4. La petición es responida con el contenido deseado en caso de existir, y finalmente, se despliega todo el contenido.
+3. El cliente es notificado con una respuesta satisfactoria del servidor, y a continuación, comienza la interpretación del documento. Al encontrar contenido adjunto, hace las peticiones a quien sea necesario para obtener el contenido. En éste caso, como el contenido se encuentra en el mismo servidor, hace la petición nuevamente sobre el contenido de las imágenes.
+4. La petición es respondida con el contenido deseado en caso de existir, y finalmente, se despliega todo el contenido.
+
+##### Los elementos básicos de HTML
+
+A continuación, se introducen los componentes básicos para el manejo de texto en HTML, se presenta como caso de estudio la implementación de una página web para el profesor ficticio Juan Soto. Primero, se presenta el contenido de la página web; de manera progresiva, se introducen elementos necesarios para darle a la página un mejor aspecto, asimismo, cada elemento introducido, es explicado.
+
+El texto principal de nuestra página expositiva es:
+
+```
+Juan Eduardo Soto PhD
+Profesor asociado, Universidad de los Andes
+Departamento de Ciencias de la computación
+Facultad de Matemáticas
+Bogotá, Colombia
+
+Mi investigación principalmente, va enfocada al desarrollo práctico de algoritmos de Machine Learning, reconocimiento de patrones y optimización convexa, con el objetivo de ampliar el entendimiento de varios paradigmas del aprendizaje estadístico sobre volúmenes inmensos de datos. Trabajo en problemas de visión por computador, reconocimiento de imágenes, tratamiento de datos, y computación de alto desempeño.
+
+Juan Soto, es un profesor asistente en el departamento de ciencias de la computación en la facultad de matemáticas de la Universidad de los Andes, donde co dirige el laboratorio de Data mining and Pattern matching. Su área de investigación, se centra en la implementación eficiente de algoritmos de aprendizaje estadístico sobre grandes bodegas de información no estructurada. Su trabajo ha sido laureado y premiado, con nominaciones al Best Paper Award de ACM, IEEE, CHI. El profesor Juan Soto, tiene los títulos Ph.D y M.Sc en Computer Science en MIT, y B.Sc en Ingeniería de Sistemas y Computación y Matemáticas en la Universidad de los Andes.
+```
+
+La primera versión de nuestro documento, guardando el texto anterior en un archivo *html*, luce desastrosa, el contenido visual de la página, presenta un conjunto de lineas sin estructura, y no se distinguen los caractéres con acentos. 
+
+
+
 
  
 
