An easy example on HTML, CSS

--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
@@ -108,14 +108,14 @@ A continuación, se introducen los componentes básicos para el manejo de texto 
 
 El texto principal de nuestra página expositiva es:
 
-```
+```html
 Juan Eduardo Soto PhD
 Profesor asociado, Universidad de los Andes
 Departamento de Ciencias de la computación
 Facultad de Matemáticas
 Bogotá, Colombia
 
-Mi investigación principalmente, va enfocada al desarrollo práctico de algoritmos de Machine Learning, reconocimiento de patrones y optimización convexa, con el objetivo de ampliar el entendimiento de varios paradigmas del aprendizaje estadístico sobre volúmenes inmensos de datos. Trabajo en problemas de visión por computador, reconocimiento de imágenes, tratamiento de datos, y computación de alto desempeño.
+Mi investigación principalmente, va enfocada al desarrollo práctico de algoritmos de Machine Learning, reconocimiento de patrones y optimización convexa, con el objetivo de ampliar el  entendimiento de varios paradigmas del aprendizaje estadístico sobre volúmenes inmensos de     datos. Trabajo en problemas de visión por computador, reconocimiento de imágenes, tratamiento de datos, y computación de alto desempeño.
 
 Juan Soto, es un profesor asistente en el departamento de ciencias de la computación en la facultad de matemáticas de la Universidad de los Andes, donde co dirige el laboratorio de Data mining and Pattern matching. Su área de investigación, se centra en la implementación eficiente de algoritmos de aprendizaje estadístico sobre grandes bodegas de información no estructurada. Su trabajo ha sido laureado y premiado, con nominaciones al Best Paper Award de ACM, IEEE, CHI. El profesor Juan Soto, tiene los títulos Ph.D y M.Sc en Computer Science en MIT, y B.Sc en Ingeniería de Sistemas y Computación y Matemáticas en la Universidad de los Andes.
 ```
