An easy example on HTML, CSS

--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
@@ -122,6 +122,14 @@ Juan Soto, es un profesor asistente en el departamento de ciencias de la computa
 
 La primera versión de nuestro documento, guardando el texto anterior en un archivo *html*, luce desastrosa, el contenido visual de la página, presenta un conjunto de lineas sin estructura, y no se distinguen los caractéres con acentos. 
 
+![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/ex2_plainContent.png)
+
+Para mejorar la aparariencia de la página, se introducen los primeros elmentos básico para el manejo de texto en HTML:
+
+Tag | Interpretación | Documentación 
+------------ | -------------
+`<p></p>` | Define párrafos de texto | *http://www.w3schools.com/tags/tag_p.asp*
+
 
 
 
