--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
@@ -124,6 +124,59 @@ La primera versión de nuestro documento, guardando el texto anterior en un arch
 
 ![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/ex2_plainContent.png)
 
+La estructura básica de un documento HTML, comienza con la declaración del tipo de documento para evitar confusión entre otros formatos parecidos `<!DOCTYPE html>`, todo el documento, está contenido dentro de el elmento `html`, éste elemento, está dividido en dos secciones `head`, `body`, la primera sección, contiene información descriptiva acerca del documento mismo, es decir el `title`, *css*, `scripts`, y otro tipo de información acerca el documento mismo. `meta` define información sobre el documento mismo, en general, especifica la codificación de texto utilizada en el documento. Finalmente, `body` contiene la información que se desea el navegador despliegue.
+
+* Estructura minimal de un documento *HTML*
+
+```html
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Title here</title>
+	</head>
+
+	<body>
+		Page content goes here.
+	</body>
+</html>
+```
+
+Puede verse que aunque el documento *html*, mostrado para definir la página del profesor Soto no contiene la estructura minimal de un documento *html*, éste es desplegado por el navegadro, esto se debe a la falta de una estructura rígida sintáctica sobre *html*. El documento *HTML* con estilo minimal es:
+
+```html
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Title here</title>
+	</head>
+
+	<body>
+		Juan Eduardo Soto PhD
+		Profesor asociado, Universidad de los Andes
+		Departamento de Ciencias de la computación
+		Facultad de Matemáticas
+		Bogotá, Colombia
+
+		Mi investigación principalmente, va enfocada al desarrollo práctico de algoritmos 
+		de Machine Learning, reconocimiento de patrones y optimización convexa, con 
+		el objetivo de ampliar el  entendimiento de varios paradigmas del aprendizaje estadístico 
+		sobre volúmenes inmensos de     datos. Trabajo en problemas de visión por computador,
+		reconocimiento de imágenes, tratamiento de datos, y computación de alto desempeño.
+
+	Juan Soto, es un profesor asistente en el departamento de ciencias de la computación en la
+	facultad de matemáticas de la Universidad de los Andes, donde co dirige el laboratorio de
+	Data mining and Pattern matching. Su área de investigación, se centra en la implementación
+	eficiente de algoritmos de aprendizaje estadístico sobre grandes bodegas de información no
+	estructurada. Su trabajo ha sido laureado y premiado, con nominaciones al Best Paper Award
+	de ACM, IEEE, CHI. El profesor Juan Soto, tiene los títulos Ph.D y M.Sc en Computer
+	Science en MIT, y B.Sc en Ingeniería de Sistemas y Computación y Matemáticas en la
+	Universidad de los Andes.
+	</body>
+</html>
+```
+
 Para mejorar la aparariencia de la página, se introducen los primeros elmentos básico para el manejo de texto en HTML:
 
 Tag | Interpretación | Documentación 
