An easy example on HTML, CSS

--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
@@ -115,9 +115,20 @@ Departamento de Ciencias de la computación
 Facultad de Matemáticas
 Bogotá, Colombia
 
-Mi investigación principalmente, va enfocada al desarrollo práctico de algoritmos de Machine Learning, reconocimiento de patrones y optimización convexa, con el objetivo de ampliar el  entendimiento de varios paradigmas del aprendizaje estadístico sobre volúmenes inmensos de     datos. Trabajo en problemas de visión por computador, reconocimiento de imágenes, tratamiento de datos, y computación de alto desempeño.
+Mi investigación principalmente, va enfocada al desarrollo práctico de algoritmos 
+de Machine Learning, reconocimiento de patrones y optimización convexa, con 
+el objetivo de ampliar el  entendimiento de varios paradigmas del aprendizaje estadístico 
+sobre volúmenes inmensos de     datos. Trabajo en problemas de visión por computador,
+reconocimiento de imágenes, tratamiento de datos, y computación de alto desempeño.
 
-Juan Soto, es un profesor asistente en el departamento de ciencias de la computación en la facultad de matemáticas de la Universidad de los Andes, donde co dirige el laboratorio de Data mining and Pattern matching. Su área de investigación, se centra en la implementación eficiente de algoritmos de aprendizaje estadístico sobre grandes bodegas de información no estructurada. Su trabajo ha sido laureado y premiado, con nominaciones al Best Paper Award de ACM, IEEE, CHI. El profesor Juan Soto, tiene los títulos Ph.D y M.Sc en Computer Science en MIT, y B.Sc en Ingeniería de Sistemas y Computación y Matemáticas en la Universidad de los Andes.
+Juan Soto, es un profesor asistente en el departamento de ciencias de la computación en la
+facultad de matemáticas de la Universidad de los Andes, donde co dirige el laboratorio de
+Data mining and Pattern matching. Su área de investigación, se centra en la implementación
+eficiente de algoritmos de aprendizaje estadístico sobre grandes bodegas de información no
+estructurada. Su trabajo ha sido laureado y premiado, con nominaciones al Best Paper Award
+de ACM, IEEE, CHI. El profesor Juan Soto, tiene los títulos Ph.D y M.Sc en Computer
+Science en MIT, y B.Sc en Ingeniería de Sistemas y Computación y Matemáticas en la
+Universidad de los Andes.
 ```
 
 La primera versión de nuestro documento, guardando el texto anterior en un archivo *html*, luce desastrosa, el contenido visual de la página, presenta un conjunto de lineas sin estructura, y no se distinguen los caractéres con acentos. 
@@ -142,7 +153,7 @@ La estructura básica de un documento HTML, comienza con la declaración del tip
 </html>
 ```
 
-Puede verse que aunque el documento *html*, mostrado para definir la página del profesor Soto no contiene la estructura minimal de un documento *html*, éste es desplegado por el navegadro, esto se debe a la falta de una estructura rígida sintáctica sobre *html*. El documento *HTML* con estilo minimal es:
+Puede verse que aunque el documento *html*, mostrado para definir la página del profesor Soto no contiene la estructura minimal de un documento *html*, éste es desplegado por el navegador, esto se debe a la falta de una estructura rígida sintáctica sobre *html*. El documento *HTML* con estilo minimal es:
 
 ```html
 <!DOCTYPE html>
@@ -176,6 +187,8 @@ Puede verse que aunque el documento *html*, mostrado para definir la página del
 	</body>
 </html>
 ```
+
+Sin embargo, la apariencia es igual.
 
 Para mejorar la aparariencia de la página, se introducen los primeros elmentos básico para el manejo de texto en HTML:
 
