An easy example on HTML, CSS

--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
@@ -131,11 +131,11 @@ Science en MIT, y B.Sc en Ingeniería de Sistemas y Computación y Matemáticas 
 Universidad de los Andes.
 ```
 
-La primera versión de nuestro documento, guardando el texto anterior en un archivo *html*, luce desastrosa, el contenido visual de la página, presenta un conjunto de lineas sin estructura, y no se distinguen los caractéres con acentos. 
+La primera versión de nuestro documento, guardando el texto anterior en un archivo *html*, luce desastrosa, el contenido visual de la página, presenta un conjunto de lineas sin estructura, y no se distinguen los caracteres con acentos. 
 
 ![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/ex2_plainContent.png)
 
-La estructura básica de un documento HTML, comienza con la declaración del tipo de documento para evitar confusión entre otros formatos parecidos `<!DOCTYPE html>`, todo el documento, está contenido dentro de el elmento `html`, éste elemento, está dividido en dos secciones `head`, `body`, la primera sección, contiene información descriptiva acerca del documento mismo, es decir el `title`, *css*, `scripts`, y otro tipo de información acerca el documento mismo. `meta` define información sobre el documento mismo, en general, especifica la codificación de texto utilizada en el documento. Finalmente, `body` contiene la información que se desea el navegador despliegue.
+La estructura básica de un documento HTML, comienza con la declaración del tipo de documento para evitar confusión entre otros formatos parecidos `<!DOCTYPE html>`, todo el documento, está contenido dentro de el elemento `html`, éste elemento, está dividido en dos secciones `head`, `body`, la primera sección, contiene información descriptiva acerca del documento mismo, es decir el `title`, *css*, `scripts`, y otro tipo de información acerca el documento mismo. `meta` define información sobre el documento mismo, en general, especifica la codificación de texto utilizada en el documento. Finalmente, `body` contiene la información que se desea el navegador despliegue.
 
 * Estructura minimal de un documento *HTML*
 
@@ -153,14 +153,14 @@ La estructura básica de un documento HTML, comienza con la declaración del tip
 </html>
 ```
 
-Puede verse que aunque el documento *html*, mostrado para definir la página del profesor Soto no contiene la estructura minimal de un documento *html*, éste es desplegado por el navegador, esto se debe a la falta de una estructura rígida sintáctica sobre *html*. El documento *HTML* con estilo minimal es:
+Puede verse que aunque el documento *html*, mostrado para definir la página del profesor Soto no contiene la estructura mínima de un documento *html*, éste es desplegado por el navegador, esto se debe a la falta de una estructura rígida sintáctica sobre *html*. El documento *HTML* con estilo mínima es:
 
 ```html
 <!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title here</title>
+		<title>Juan Eduardo Soto</title>
 	</head>
 
 	<body>
@@ -188,13 +188,17 @@ Puede verse que aunque el documento *html*, mostrado para definir la página del
 </html>
 ```
 
-Sin embargo, la apariencia es igual.
+Sin embargo, la apariencia es igual, con excepción de que ahora se muestran las palabras con los respectivos acentos.
 
-Para mejorar la aparariencia de la página, se introducen los primeros elmentos básico para el manejo de texto en HTML:
+Para mejorar la apariencia de la página, se introducen los primeros elementos básico para el manejo de texto en HTML:
 
 Tag | Interpretación | Documentación 
 --- | --- | ---
 `<p></p>` | Define párrafos de texto | *http://www.w3schools.com/tags/tag_p.asp*
+`<hn></hn>` | Define los encabezados de nivel *n* en el documento | *http://www.w3schools.com/tags/tag_hn.asp*
+`<em></em>` | Enfatiza el contenido del *tag* | *http://www.w3schools.com/tags/tag_em.asp*
+
+El propósito de *HTML* como lenguaje, es el de agregar semántica y estructura a su contenido. Las instrucciones de la presentación de los elementos, no las da *HTML*, es el trabajo del encargado en la escritura del código, elegir los elementos de *HTML* más adecuados para proveer un significado apropiado al contenido. Además de dar significado al documento, *HTML* brinda estructura al documento. La manera como se anidan los elementos, fortalece su relación semántica, ésta estructura de elementos anidados, es conocida como *DOM: Document Object Model*
 
 
 
