An easy example on HTML, CSS

--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
@@ -198,7 +198,42 @@ Tag | Interpretación | Documentación
 `<hn></hn>` | Define los encabezados de nivel *n* en el documento | *http://www.w3schools.com/tags/tag_hn.asp*
 `<em></em>` | Enfatiza el contenido del *tag* | *http://www.w3schools.com/tags/tag_em.asp*
 
-El propósito de *HTML* como lenguaje, es el de agregar semántica y estructura a su contenido. Las instrucciones de la presentación de los elementos, no las da *HTML*, es el trabajo del encargado en la escritura del código, elegir los elementos de *HTML* más adecuados para proveer un significado apropiado al contenido. Además de dar significado al documento, *HTML* brinda estructura al documento. La manera como se anidan los elementos, fortalece su relación semántica, ésta estructura de elementos anidados, es conocida como *DOM: Document Object Model*
+El propósito de *HTML* como lenguaje, es el de agregar semántica y estructura a su contenido. Las instrucciones de la presentación de los elementos, no las da *HTML*, es el trabajo del encargado en la escritura del código, elegir los elementos de *HTML* más adecuados para proveer un significado apropiado al contenido. Además de dar significado al documento, *HTML* brinda estructura al documento. La manera como se anidan los elementos, fortalece su relación semántica, ésta estructura de elementos anidados, es conocida como *DOM: Document Object Model*.
+
+Dando estructura y semántica a nuestra página web, el código queda así:
+
+```html
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Juan Eduardo Soto</title>
+	</head>
+
+	<body>
+		<h2>Juan Eduardo Soto Ph.D</h2>
+		<h3>Profesor asociado, Universidad de los Andes</h3>
+		<h3>Departamento de Ciencias de la computación</h3>
+		<h3>Facultad de Matemáticas</h3>
+		<h3>Bogotá, Colombia</h3>
+
+		<p>Mi investigación principalmente, va enfocada al desarrollo práctico de algoritmos 
+		de <em>Machine Learning</em>, reconocimiento de patrones y optimización convexa, con 
+		el objetivo de ampliar el  entendimiento de varios paradigmas del aprendizaje estadístico 
+		sobre volúmenes inmensos de     datos. Trabajo en problemas de visión por computador,
+		reconocimiento de imágenes, tratamiento de datos, y computación de alto desempeño.</p>
+
+		<p>Juan Soto, es un profesor asistente en el departamento de ciencias de la computación en la
+		facultad de matemáticas de la Universidad de los Andes, donde co-dirige el laboratorio de
+		<em>Data mining and Pattern matching</em>. Su área de investigación, se centra en la implementación
+		eficiente de algoritmos de aprendizaje estadístico sobre grandes bodegas de información no
+		estructurada. Su trabajo ha sido laureado y premiado, con nominaciones al Best Paper Award
+		de ACM, IEEE y CHI. El profesor Juan Soto, tiene los títulos Ph.D y M.Sc en Computer
+		Science and Electrical Engineering en MIT, y B.Sc en Ingeniería de Sistemas y Computación y Matemáticas en la
+		Universidad de los Andes.</p>
+	</body>
+</html>
+```
 
 
 
