An easy example on HTML, CSS

--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
@@ -200,7 +200,7 @@ Tag | Interpretación | Documentación
 
 El propósito de *HTML* como lenguaje, es el de agregar semántica y estructura a su contenido. Las instrucciones de la presentación de los elementos, no las da *HTML*, es el trabajo del encargado en la escritura del código, elegir los elementos de *HTML* más adecuados para proveer un significado apropiado al contenido. Además de dar significado al documento, *HTML* brinda estructura al documento. La manera como se anidan los elementos, fortalece su relación semántica, ésta estructura de elementos anidados, es conocida como *DOM: Document Object Model*.
 
-Dando estructura y semántica a nuestra página web, el código queda así:
+Dando estructura y semántica a nuestra página web, el código y la apariencia, quedan así:
 
 ```html
 <!DOCTYPE html>
