An easy example on HTML, CSS

--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
@@ -237,6 +237,15 @@ Dando estructura y semántica a nuestra página web, el código y la apariencia,
 
 ![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/ex2_BasicContent.png)
 
+La apariencia, posee el estilo por defecto del navegardor en el cual se visualiza la página. Ahora, se quiere agregar la foto del profesor Soto, para ésto, *HTML* proporciona el *tag* `<img>`. `<img>`, es un *tag* o elemento *html* inusual, hasta ahora, todos los elementos vistos, son aplicaciones semánticas sobre cierto contenido, por lo general texto, sin embargo, este elemento, es vacio, es decir, carece de contenido, a su vez, el objeto de aplicación, es dado por medio de un atributo, es decir, es un elemento vacio con atributos. Otro ejemeplo de elemento vacío es `<br>`. El contenido de la imagen como objeto desplegable, es dado al elemento `<img>`, por medio del atributo `src` el cual denota la fuente de la imagen. La sintaxis de un elento vacío con atributos es: `<el at1="val1" at2="val2">`, donde `atn`denota en n-ésimo nombre del atributo, y `valn`, denota el valor de dicho atributo. El caso de `<img>`, es `<img src="where.format" alt="Image name">`.
+
+Tag | Interpretación | Documentación 
+--- | --- | ---
+`<img>` | Agrega una imagen al documento dada la ubicación del recurso | *http://www.w3schools.com/tags/tag_img.asp*
+`<br>` | Salto de linea | *http://www.w3schools.com/tags/tag_br.asp*
+
+
+
 
 
 
